--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@ body {
     flex-direction: row;
     justify-content: space-around;
     border: .5px solid orangered;
+    size: 100px;
     background: lavender;
 }
 
