--- a/style.css
+++ b/style.css
@@ -2,7 +2,9 @@ header {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    padding: 10px;
+    font-family: 'Bree Serif', serif;
+    text-transform: uppercase;
+    font-size: 2em;
     color: orangered;
 }
 
@@ -10,7 +12,6 @@ body {
     display: flex;
     justify-content: center;
     background: peachpuff;
-    margin-top: 50px
 }
 
 .container {
@@ -29,6 +30,8 @@ body {
     border: .5px solid orangered;
     background: peachpuff;
     color: orangered;
+    font-family: 'Bree Serif', serif;
+    font-size: 1.2em;
 }
 
 .row {
@@ -42,17 +45,18 @@ body {
 .square, .emptySquare {
     display: flex;
     flex-direction: row;
-    /* justify-content: space-between; */
+    justify-content: space-between;
     padding: 70px;
     border: .5px solid orangered;
     background: peachpuff;
     color: orangered;
-    font: 30px sans-serif;
-
+    font-family: 'Bree Serif', serif;
+    font-size: 25px; 
+    
 }
 
 .square:hover {
-    background: white;
+    background: purple;
 }
 
 .modal-content{
@@ -99,5 +103,17 @@ body {
       flex-direction: row;
       justify-content: center;
       margin-top: 20px;
+      font-family: 'Bree Serif', serif;
+      text-transform: uppercase;
       color: orangered;
+  }
+  .score {
+      color: purple;
+      font-size: 2em;
+      font-family: 'Bree Serif', serif;
+  }
+
+  .questionScore {
+    color: peachpuff;
+
   }
