--- a/style.css
+++ b/style.css
@@ -25,7 +25,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    padding: 10px;
+    flex-grow: 7;
+    padding: 5px;
     border: .5px solid orangered;
     background: peachpuff;
     color: orangered;
@@ -44,7 +45,7 @@ body {
 .square, .emptySquare {
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     padding: 70px;
     border: .5px solid orangered;
     background: peachpuff;
