--- a/style.css
+++ b/style.css
@@ -25,9 +25,8 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    flex-grow: 7;
-    padding: 5px;
-    border: .5px solid orangered;
+    padding: 10px;
+    border: 5px solid orangered;
     background: peachpuff;
     color: orangered;
     font-family: 'Bree Serif', serif;
@@ -47,11 +46,12 @@ body {
     flex-direction: row;
     justify-content: space-around;
     padding: 70px;
-    border: .5px solid orangered;
+    border: 2px solid orangered;
     background: peachpuff;
     color: orangered;
     font-family: 'Bree Serif', serif;
     font-size: 25px; 
+    font-weight: bold;
     
 }
 
@@ -111,6 +111,7 @@ body {
       color: purple;
       font-size: 2em;
       font-family: 'Bree Serif', serif;
+      font-weight: bold; 
   }
 
   .questionScore {
