--- a/style.css
+++ b/style.css
@@ -79,13 +79,14 @@ body {
     left: 0;
     height: 100%;
     width: 100%;
-    position: absolute;
+    position: fixed;
     background: purple;
   }
 
   .modal {
-      height: 50%;
+      height: 50;
       width: 50%;
+      padding: 50px;
       background: peachpuff;
 
   }
@@ -94,7 +95,9 @@ body {
       display: flex;
       justify-content: center;
       font-family: 'Bree Serif', serif;
-      font-size: 1.5em;
+      font-size: 2em;
+      text-transform: uppercase;
+      text-align: center;
       color: orangered;
   }
 
@@ -104,6 +107,7 @@ body {
       justify-content: center;
       margin-top: 20px;
       font-family: 'Bree Serif', serif;
+      font-size: 1.2em;
       text-transform: uppercase;
       color: orangered;
   }
